# VulkanProj

./: .gitignore  CMakeLists.txt  CmakePresets.json  README.md  build_and_package.ps1  build_release.ps1  build_release_new.ps1  compile_shaders.ps1  old.cpp  vcpkg.json
1/: helpers.h  main.cpp
VulkanApp_Release/shaders/: vert.spv
src/: GameObject.h  HelloTriangleApplication.h  buffers.h  camera.h  commandsync.h  cube_mesh.h  descriptors.h  helpers.h  main.cpp  pipeline.h  setup.h  sphere_mesh.h  swapchain.h  textures.h  vertex.h  vertex_helpers.h  window.h
src/shaders/: lambert.frag.glsl
